style.css
html, body {
    margin: 0;
    height: 100%;
}
body {
    display: flex;
    flex-direction: column;
    align-items: center; 
   
background: -moz-linear-gradient(top,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0.33) 23%, rgba(0,0,0,0) 47%, rgba(0,0,0,0) 58%, rgba(0,0,0,0) 74%, rgba(0,0,0,0) 98%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
background: -webkit-linear-gradient(top,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.33) 23%,rgba(0,0,0,0) 47%,rgba(0,0,0,0) 58%,rgba(0,0,0,0) 74%,rgba(0,0,0,0) 98%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
background: linear-gradient(to bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.33) 23%,rgba(0,0,0,0) 47%,rgba(0,0,0,0) 58%,rgba(0,0,0,0) 74%,rgba(0,0,0,0) 98%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */

}
.main {
    display: flex;
    flex-shrink: 0;
}

#operators {
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
}

#numsContainer{
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
   
}

.display{
    display: flex;
    justify-content: right;
    font-family: 'Calculator', sans-serif;                                   
    background-color: black;
    color:#7092f0;
    height: 40px;
    margin-bottom: 10px;
    padding: 5px;
    font-size: 36px;
    font-weight: bolder;
    border-radius: 10px;
}

.containAll {
    display: flex;
    flex-direction: column;
    min-width: 200px;
    flex-shrink: 0;
    margin-top: 100px;
    padding: 45px;
    border-radius: 50px; 
    background:  linear-gradient(
        100deg, #1e1d1d 0%,
        #727272 25%,
        #e3e3e3 50%,
        #393838 100%
    );
    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
    
}

button {
    font-weight: bolder;
    font-size: 100%;
    color: black;
    margin: 5px;
    padding: 20px;
    border-radius: 20px;
    background:
        linear-gradient(
            100deg, #787878 0%,
            #b5b5b5 25%,
            #e3e3e3 50%,
            #787878 100%

        );
}

 #misc, #operator{
    background: linear-gradient(
        70deg, #844414 0%,
                #9c5f3d 25%,
                #fcd5be 50%,
                #cf7d52 75%,
                #844414 100%   
    );
}

